--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "react-d3-test",
+  "name": "fsm-editor",
   "version": "0.1.0",
   "private": true,
+  "author": "Sam Hunt",
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -9,7 +10,7 @@
     "javascript-state-machine": "^3.1.0",
     "d3": "^6.2.0",
     "prismjs": "^1.22.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,13 +39,13 @@
   "devDependencies": {
     "typescript": "^4.1.2",
     "@types/jest": "^26.0.15",
-    "@types/node": "^12.19.6",
-    "@types/react": "^16.14.1",
-    "@types/react-dom": "^16.9.10",
+    "@types/node": "^14.14.10",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/d3": "^6.2.0",
     "@types/prismjs": "^1.16.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.2.2"
+    "@testing-library/user-event": "^12.3.0"
   }
 }
